--- a/src/main/webapp/public/test.xhtml
+++ b/src/main/webapp/public/test.xhtml
@@ -4,7 +4,7 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:p="http://primefaces.org/ui"
-	xmlns:pe="http://primefaces.org/ui/extensions">
+	xmlns:sec="http://www.springframework.org/security/facelets/tags">
 
 <h:head>
 	<title>Test</title>
@@ -19,6 +19,13 @@
 		<br />
 		<br />
 		<p:commandButton value="Ok" />
+		
+		<sec:isAuthenticated>
+		auth
+		</sec:isAuthenticated>
+		<sec:isAnonymous>
+		123
+		</sec:isAnonymous>
 
 	</h:form>
 </h:body>
