--- a/src/main/webapp/secure/user.xhtml
+++ b/src/main/webapp/secure/user.xhtml
@@ -6,6 +6,7 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
+	xmlns:sec="http://www.springframework.org/security/facelets/tags"
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
 	<title>JSF Spring Integration</title>
@@ -17,6 +18,22 @@
 		<br />
 		<p:commandButton value="Test" actionListener="#{userBean.test}" />
 	</h:form>
+	
+	<h:form>
+	<p:commandButton value="test2" onclick="PF('dialogTestWidget').show()"/>
+		<p:dialog id="dialogTest" widgetVar="dialogTestWidget">
+			<h:outputText value="Hello: #{userBean.username}" />
+		</p:dialog>
+	</h:form>
+	
+	<p:panel>
+		<sec:ifAnyGranted roles="ROLE_ADMIN">
+			ADMIN
+		</sec:ifAnyGranted>
+		<sec:ifAnyGranted roles="ROLE_USER">
+			USER
+		</sec:ifAnyGranted>
+	</p:panel>
 	
 	<h:form onsubmit="this.action='#{request.contextPath}/logout';">
 		<p:commandButton value="Logout" ajax="false" />
